tests/files/lexer_tests/should_fail/090.cmdr
//Should not parse due to missing rparen
do echo hi; while (true;